--- a/vercel.json
+++ b/vercel.json
@@ -1,45 +1,75 @@
 {
-  "version": 2,
-  "functions": {
-    "src/app/**": { "maxDuration": 10 }
-  },
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" },
-        { "key": "Referrer-Policy", "value": "origin-when-cross-origin" },
-        {
-          "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://warpcast.com https://*.warpcast.com https://miniapps.farcaster.xyz https://*.miniapps.farcaster.xyz https://*.farcaster.xyz;"
+    "version": 2,
+    "functions": {
+        "src/app/**": {
+            "maxDuration": 10
         }
-      ]
     },
-    {
-      "source": "/sw.js",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" },
-        { "key": "Service-Worker-Allowed", "value": "/" }
-      ]
-    },
-    {
-      "source": "/images/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/_next/static/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    }
-  ],
-  "redirects": [
-    { "source": "/admin", "destination": "https://hypeya.xyz/wp-admin", "permanent": true }
-  ],
-  "rewrites": [
-    { "source": "/api/wp/(.*)", "destination": "https://hypeya.xyz/wp-json/wp/v2/$1" }
-  ]
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "X-Content-Type-Options",
+                    "value": "nosniff"
+                },
+                {
+                    "key": "X-XSS-Protection",
+                    "value": "1; mode=block"
+                },
+                {
+                    "key": "Referrer-Policy",
+                    "value": "origin-when-cross-origin"
+                },
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "frame-ancestors 'self' https://warpcast.com https://*.warpcast.com https://farcaster.xyz https://*.farcaster.xyz;"
+                }
+            ]
+        },
+        {
+            "source": "/sw.js",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=0, must-revalidate"
+                },
+                {
+                    "key": "Service-Worker-Allowed",
+                    "value": "/"
+                }
+            ]
+        },
+        {
+            "source": "/images/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        },
+        {
+            "source": "/_next/static/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        }
+    ],
+    "redirects": [
+        {
+            "source": "/admin",
+            "destination": "https://hypeya.xyz/wp-admin",
+            "permanent": true
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/api/wp/(.*)",
+            "destination": "https://hypeya.xyz/wp-json/wp/v2/$1"
+        }
+    ]
 }
