--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@coinbase/onchainkit": "^0.38.19",
         "@radix-ui/react-slot": "^1.2.3",
         "@tanstack/react-query": "^5.85.5",
+        "@vercel/analytics": "^1.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.540.0",
