--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,10 @@
                 {
                     "key": "Content-Security-Policy",
                     "value": "frame-ancestors 'self' https://warpcast.com https://*.warpcast.com https://farcaster.xyz https://*.farcaster.xyz;"
+                },
+                {
+                    "key": "X-Robots-Tag",
+                    "value": "noindex, nofollow, noimageindex"
                 }
             ]
         },
